--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         </audio>
 
         <div id="logoContainer">
-          <img src="img/logo_v2_transp.png">
+          <!-- <img src="img/logo_v2_transp.png"> -->
+          <img src="img/logo_v3.svg">
         </div>
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
