--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
         <div id="logoContainer">
           <!-- <img src="img/logo_v2_transp.png"> -->
+          <div class="vimeo-wrapper">
+            <iframe src="https://player.vimeo.com/video/304824383?background=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+          </div>
           <div class="logoContainer top-bar">
 
 
@@ -92,5 +95,6 @@
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
+      <script src="https://player.vimeo.com/api/player.js"></script>
     </body>
 </html>
