fixed small vimeo bug

--- a/index.html
+++ b/index.html
@@ -13,67 +13,22 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     </head>
     <body>
       <div class="wrapper">
-        <div class="fullscreenBg" id="videoPlayer">
-          <!-- <img src="img/logo_v2.png"> -->
-          <!-- <video muted autoplay class="fullscreenBgVideo" poster="img/logo_v2.png"> -->
-          <video muted autoplay class="fullscreenBgVideo">
-              <source src="vidblack/0_black_1.mp4" type="video/mp4">
-          </video>
-          <div class="videoPlaylist">
-              <a href="vidblack/01.mp4" class="current-video"></a>
-              <a href="vidblack/02.mp4"></a>
-              <a href="vidblack/03.mp4"></a>
-              <a href="vidblack/04.mp4"></a>
-              <a href="vidblack/05.mp4"></a>
-              <a href="vidblack/06.mp4"></a>
-              <a href="vidblack/07.mp4"></a>
-              <a href="vidblack/08.mp4"></a>
-              <a href="vidblack/09.mp4"></a>
-              <a href="vidblack/10.mp4"></a>
-              <a href="vidblack/11.mp4"></a>
-              <a href="vidblack/12.mp4"></a>
-              <a href="vidblack/13.mp4"></a>
-              <a href="vidblack/14.mp4"></a>
-              <a href="vidblack/15.mp4"></a>
-              <a href="vidblack/16.mp4"></a>
-              <a href="vidblack/17.mp4"></a>
-          </div>
-          <!-- <div class="videoPlaylist">
-              <a href="vid/01.mp4" class="current-video"></a>
-              <a href="vid/02.mp4"></a>
-              <a href="vid/03.mp4"></a>
-              <a href="vid/04.mp4"></a>
-              <a href="vid/05.mp4"></a>
-              <a href="vid/06.mp4"></a>
-              <a href="vid/07.mp4"></a>
-              <a href="vid/08.mp4"></a>
-              <a href="vid/09.mp4"></a>
-              <a href="vid/10.mp4"></a>
-              <a href="vid/11.mp4"></a>
-              <a href="vid/12.mp4"></a>
-              <a href="vid/13.mp4"></a>
-              <a href="vid/14.mp4"></a>
-              <a href="vid/15.mp4"></a>
-              <a href="vid/16.mp4"></a>
-              <a href="vid/17.mp4"></a>
-          </div> -->
-        </div>
 
         <audio id="audioplayer">
           <source src="aud/OhThePlacesYoudGo.mp3" type="audio/mpeg">
         </audio>
 
-        <div id="logoContainer">
+        <div id="videoWrapper">
           <!-- <img src="img/logo_v2_transp.png"> -->
           <div class="vimeo-wrapper">
-            <iframe src="https://player.vimeo.com/video/304824383?background=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/304824114?background=1&loop=0" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
           </div>
+
           <div class="logoContainer top-bar">
-
-
             <div class="logoContainer info name">
               <span><a href="https://lukasengelhardt.net" target="_blank">Lukas Engelhardt</a> & <a href="https://soundcloud.com/danielcherney" target="_blank">Daniel Cherney</a></span>
             </div>
@@ -81,18 +36,27 @@
               <span>Oh, The Placed You'd Go</span>
             </div>
           </div>
-          <img src="img/logo_v3b.svg">
+
+          <img class="logoContainer logo" src="img/logo_v3b.svg">
+
           <div class="logoContainer bottom-bar">
             <div class="logoContainer info click">
               <span>Click anywhere to begin</span>
             </div>
           </div>
+
         </div>
-      </wrapper>
+
+        <div id="dialog" title="Basic dialog">
+          <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+        </div>
+
+      </div>
 
       <script src="js/vendor/modernizr-3.5.0.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
       <script src="https://player.vimeo.com/api/player.js"></script>
