--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Oh, the Places You'd Go</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,13 +13,11 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     </head>
     <body>
       <div class="wrapper">
 
-        <audio id="audioplayer">
-          <source src="aud/OhThePlacesYoudGo.mp3" type="audio/mpeg">
+        <audio loop id="audioplayer">
         </audio>
 
         <div id="videoWrapper">
@@ -47,9 +45,11 @@
 
         </div>
 
-        <div id="dialog" title="Basic dialog">
-          <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
-        </div>
+        <!-- <div id="dialog" title="Basic dialog">
+          <p>You would download a car, of course, we all would. Since the 1980s the entertainment industry has been massively lobbying against what they dubbed piracy—a term that has been firmly established in today’s discourse. But biased terminology cannot hide the fact that copying and stealing are two different thing and with the technical possibilities came downloads and streaming services en masse.</p>
+          <p>With todays photogrammetric possibilities, a simple video can be enough to create a rudimentary 3d model of objects, places and people. Not only is the world ours but with mankind’s silent conquest of three dimensional space in the form of consumer quad-copters it’s ours for the taking.</p>
+          <p>Congratulations! Today is your day. Oh, the things you would own. Oh, the places you’d go.</p>
+        </div> -->
 
       </div>
 
