--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
+
+<!--
+website + visuals by lukas engelhardt
+music by daniel cherney :-*
+-->
+
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
@@ -9,7 +15,6 @@
 
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -17,11 +22,10 @@
     <body>
       <div class="wrapper">
 
-        <audio loop id="audioplayer">
+        <audio id="audioplayer">
         </audio>
 
         <div id="videoWrapper">
-          <!-- <img src="img/logo_v2_transp.png"> -->
           <div class="vimeo-wrapper">
             <iframe src="https://player.vimeo.com/video/304824114?background=1&loop=0" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
           </div>
@@ -31,11 +35,13 @@
               <span><a href="https://lukasengelhardt.net" target="_blank">Lukas Engelhardt</a> & <a href="https://soundcloud.com/danielcherney" target="_blank">Daniel Cherney</a></span>
             </div>
             <div class="logoContainer info title">
-              <span>Oh, The Placed You'd Go</span>
+              <span>Oh, The Places You'd Go</span>
             </div>
           </div>
 
-          <img class="logoContainer logo" src="img/logo_v3b.svg">
+          <div class="logoContainer logo">
+            <img  src="img/logo_v3b.svg">
+          </div>
 
           <div class="logoContainer bottom-bar">
             <div class="logoContainer info click">
@@ -44,12 +50,6 @@
           </div>
 
         </div>
-
-        <!-- <div id="dialog" title="Basic dialog">
-          <p>You would download a car, of course, we all would. Since the 1980s the entertainment industry has been massively lobbying against what they dubbed piracy—a term that has been firmly established in today’s discourse. But biased terminology cannot hide the fact that copying and stealing are two different thing and with the technical possibilities came downloads and streaming services en masse.</p>
-          <p>With todays photogrammetric possibilities, a simple video can be enough to create a rudimentary 3d model of objects, places and people. Not only is the world ours but with mankind’s silent conquest of three dimensional space in the form of consumer quad-copters it’s ours for the taking.</p>
-          <p>Congratulations! Today is your day. Oh, the things you would own. Oh, the places you’d go.</p>
-        </div> -->
 
       </div>
 
