added dialog box

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@ music by daniel cherney :-*
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Oh, the Places You'd Go</title>
-        <meta name="description" content="">
+        <meta name="description" content="You would download a car. Totally, we all would. Oh, the Places You'd Go is an audiovisual project by Lukas Engelhardt and Daniel Cherney.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/jquery-ui.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -48,9 +49,13 @@ music by daniel cherney :-*
               <span>Click anywhere to begin</span>
             </div>
           </div>
-
         </div>
-
+      </div>
+      <div id="dialog" title="Oh, The Places You'd Go">
+        <p>You would download a car. Totally, we all would.</p>
+        <p>With todays photogrammetric possibilities, a simple video can be enough to create a rudimentary 3d model of objects, places and people. Not only is the world ours but with mankind’s silent conquest of three dimensional space in the form of consumer quad-copters it’s ours for the taking.</p>
+        <p>Congratulations! Today is our day. Oh, the things we would own.</p>
+        <p>Oh, the places you’d go.</p>
       </div>
 
       <script src="js/vendor/modernizr-3.5.0.min.js"></script>
